--- a/kotiki-java/web/pom.xml
+++ b/kotiki-java/web/pom.xml
@@ -30,4 +30,13 @@
 
     <packaging>jar</packaging>
 
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+    </plugins>
+</build>
+
 </project>
