--- a/kotiki-java/web/src/main/resources/application.properties
+++ b/kotiki-java/web/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=1
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.format_sql=true
 server.port=9191
