--- a/kotiki-java/pom.xml
+++ b/kotiki-java/pom.xml
@@ -4,17 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <modules>
-        <module>dao</module>
-        <module>service</module>
-        <module>web</module>
-    </modules>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
     <groupId>ru.itmo.kotiki_spring</groupId>
