--- a/kotiki-java/catService/pom.xml
+++ b/kotiki-java/catService/pom.xml
@@ -8,7 +8,7 @@
         <version>2.7.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ru.itmo.kotiki_spring</groupId>
+    <groupId>ru.itmo.kotiki</groupId>
     <artifactId>catService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>catService</name>
